fix: fixed overflow-x issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@ html,
 body,
 .overflow-wrap {
   max-width: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   // position: absolute;
 }
 
